[package]
name = "databend-base"
version = "0.2.3"
edition = "2024"

[dependencies]
async-trait = "0.1"
ctrlc = "3.4"
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
